# dismisser

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  calibrate.py  pyproject.toml  run.py
docs/todo/: adaptive-calibration.md
src/dismisser/: __init__.py  app.py  attention.py  calibration.py  calibration_model.py  camera_preview.py  config.py  gaze.py  gaze_filter.py  main.py  overlay.py  platform_actions.py  types.py  ui_snap.py
tests/fixtures/: sample_calibration.jsonl  sample_head_pose_calibration.jsonl
